fix: text align more options (#948)
* fix: text align more options

* fix: acceptance transparent

--- a/source/sass/utility/_text-align.scss
+++ b/source/sass/utility/_text-align.scss
@@ -1,4 +1,4 @@
-$alignments: left, right, center, justify, initial, inherit;
+$alignments: left, right, center, justify, initial, inherit, start, end;
 
 @each $alignment in $alignments {
 
